# Rust-Tcp-Server

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  dhat-heap.json
bench/: _loadgen_wrap.sh  c10k.sh  metal_run.sh  plot.py  profile.sh  run.sh  scaling.sh
bench/results/: c10k_README.md  c10k_epoll-et.csv  c10k_epoll-et_r50000_c10000.hgrm  c10k_epoll-et_r50000_c8000.hgrm  c10k_epoll-lt.csv  c10k_epoll-lt_r50000_c10000.hgrm  c10k_epoll-lt_r50000_c8000.hgrm  c10k_event-loop.csv  c10k_event-loop_r50000_c10000.hgrm  c10k_forking.csv  c10k_forking_r50000_c10000.hgrm  c10k_io-uring.csv  c10k_io-uring_r50000_c10000.hgrm  c10k_io-uring_r50000_c8000.hgrm  c10k_multireactor.csv  c10k_multireactor_r50000_c10000.hgrm  c10k_multireactor_r50000_c8000.hgrm  c10k_poll.csv  c10k_poll_r50000_c10000.hgrm  c10k_preforked.csv  c10k_summary.csv  (+92 more)
core/: Cargo.toml
docs/: ARCHITECTURE.md  BENCHMARKS.md  x-thread.md
forking/: Cargo.toml
iterative/: Cargo.toml
loadgen/: Cargo.toml
loadgen/src/: main.rs
pre_fork/: Cargo.toml
server/: 404.html  Cargo.toml  index.html
server/assets/: index.html
server/assets/static/: style.css
server/src/: lib.rs  main.rs  reactor.rs
server/src/models/: blocking.rs  epoll.rs  event_io.rs  event_loop.rs  forking.rs  io_uring.rs  iterative.rs  mod.rs  multireactor.rs  poll.rs  preforked.rs  thread_per_conn.rs  thread_pool.rs
server/src/sys/: affinity.rs  conn_table.rs  epoll.rs  mod.rs  poll.rs  signal.rs  socket.rs  syscall.rs
server/tests/: conformance.rs  iterative.rs
thread_per_request/: Cargo.toml
thread_pools/: Cargo.toml
(+184 files in other folders)
